                ActivateResearcherMenu()
            legacymenu.cpp
                included "ResearcherMenu.h"
                included "DataSelectionMenu.h"
                added    ActivateResearcherMenu()
                changed  backLoad()
                changed  activate()
            racestopmenu.cpp
                RmStopRaceMenu()
                    changed  AssistedHuman is a human
            legacymenu/
                CMakeList.txt
                    added    ResearcherMenu.h and .cpp
                    added    DataSelectionMenu.h and .cpp
                    added    backend in both ADD_SDLIB_LIBRARY and ADD_SDLIB_INCLUDEDIR
                mainscreens/mainmenu.cpp
                    included "DataSelectionMenu.h"
                    added    GoBack()
                    changed  MainMenuInit()
                racescreens/
                    racerunningmenus.cpp
                        removed RmProgressiveTimeModifier implementation and calls
                    racestopmenu.cpp
                        removed rmProgressiveTimeModifier.start() call
                confscreens/soundconfig.cpp
                    added ChangeInterventionVolume()
                    added logic to create new controls for intervention volume and store their data
                    changed readSoundCfg()
        graphic/
            ssggraph/
                CMakeLists.txt added connection to frontend module
                grboard.cpp
                    included "Mediator.h"
                    included "IndicatorConfig.h"

                    added   m_textures array

                    added   DispIndicators()
                    added   DispIndicatorIcon();
                    added   DispIndicatorText();
                    added   LoadIndicatorTextures()

                    changed cGrBoard(): removed assignments of removed members
                    changed ~cGrBoard(): removed deletes of removed members