@@ -179,15 +179,19 @@ Changed:
             racestopmenu.cpp
                 RmStopRaceMenu()
                     changed  AssistedHuman is a human
+                    removed controls and forcefeedback menu
             legacymenu/
                 CMakeList.txt
                     added    ResearcherMenu.h and .cpp
                     added    DataSelectionMenu.h and .cpp
                     added    backend in both ADD_SDLIB_LIBRARY and ADD_SDLIB_INCLUDEDIR
-                mainscreens/mainmenu.cpp
-                    included "DataSelectionMenu.h"
-                    added    GoBack()
-                    changed  MainMenuInit()
+                mainscreens
+                    /mainmenu.cpp
+                        included "DataSelectionMenu.h"
+                        added    GoBack()
+                        changed  MainMenuInit()
+                    /optionsmenu.cpp
+                        removed graphics, advanced graphics, opengl, simulation, ai opponents menu
                 racescreens/
                     racerunningmenus.cpp
                         removed RmProgressiveTimeModifier implementation and calls
@@ -304,8 +308,12 @@ Changed:
   data/data/menu/
     mainmenu.xml
         added a back button
+        renamed race button
     soundconfigmenu.xml
         added controls for intervention sound volume
+    stopracemenu.xml
+        removed controls and forcefeedback menu
+    optionsmenu.xml
         
   cmake/
     checks.cmake
